# chutes-and-ladders-bench

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
chutes_bench/: __init__.py  __main__.py  board.py  chart.py  elo.py  export.py  game.py  invocation.py  persistence.py  players.py  tools.py
docs/: config.js  game.html  index.html
scripts/: download_db.py  export_json.py  upload_db.py
tests/: test_board.py  test_detailed_persistence.py  test_elo.py  test_export.py  test_game.py  test_game_logging.py  test_invocation_capture.py  test_moves.py  test_persist_game_log.py  test_persistence.py  test_players.py  test_tools.py
